# bitgraph

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
srcs/: CMakeLists.txt  automaton_main.cpp
srcs/automaton/: CMakeLists.txt  binary_image.cpp
srcs/automaton/include/: binary_image.h
tests/: CMakeLists.txt  binary_image.cpp  matplotlibcpp_sample.cpp  noise.cpp
